# support-agent-env

./: .gitignore  Dockerfile  README.md  api.py  check_compliance.py  check_submission.py  demo_runner.py  fix_submission.ps1  graders.py  inference.py  inference_gemini.py  openenv.yaml  pyproject.toml  quick_test.py  repair_grader.py  requirements.txt  run_all_tests.py  safe_grader.py  schema.py  support_env.py  test_all.py  test_out.txt  test_results.txt  test_results_ascii.txt  test_results_final.txt  test_results_v2.txt  test_results_v3.txt  test_results_v4.txt  test_results_v5.txt  test_results_v6.txt  test_results_v7.txt  test_scores.py  test_validator.py  tickets.json  validate_scores.py  verify_inference.py  verify_output.txt  vout.txt  vout_ascii.txt
server/: __init__.py  app.py
tasks/: grader.py
templates/: index.html
