[project]
name = "support-agent-env"
version = "1.0.0"
description = "OpenEnv customer support environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.0",
    "openai>=1.0.0",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.6",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
